fix : updated format times + updated routes in auth inteceptor + fixed mobile layout issue

--- a/src/app/features/dashboard/components/receptionist-dashboard/components/todays-queue/todays-queue.scss
+++ b/src/app/features/dashboard/components/receptionist-dashboard/components/todays-queue/todays-queue.scss
@@ -50,6 +50,7 @@
     table {
         width: 100%;
         background: transparent;
+        padding: 0 0.5rem;
 
         .mat-mdc-header-cell {
             color: #718096;
