--- a/src/app/layout/shell/shell.scss
+++ b/src/app/layout/shell/shell.scss
@@ -1,7 +1,6 @@
 :host {
     --sidebar-width: 250px;
     --transition: all 0.3s ease-in-out;
-    white-space: nowrap;
     overflow-x: hidden;
 }
 
